src/main/java/syntactic/test/failing/emptyImp.ru
struct A{
}

impl A{}
start{}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 4 | 8 | Se esperaba [KW_FN] pero se encontró CLOSE_CURLY: } |